--- a/LeHoangNhatTanRazorPages/Pages/Staff/Tags/Index.cshtml
+++ b/LeHoangNhatTanRazorPages/Pages/Staff/Tags/Index.cshtml
@@ -1,4 +1,45 @@
 ﻿@page
 @model LeHoangNhatTanRazorPages.Pages.Staff.Tags.IndexModel
+
 @{
+    ViewData["Title"] = "Quản lý thẻ";
+}
+
+<partial name="~/Pages/Shared/_SessionAuth.cshtml" />
+
+<div class="container-fluid">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2><i class="bi bi-bookmark"></i> Quản lý thẻ</h2>
+        <button type="button" class="btn btn-primary" onclick="modalDialogManager.loadFormModal('@Url.Page("/Staff/Tags/Index","Create")', '#commonModal')">
+            <i class="bi bi-plus-circle"></i> Tạo thẻ
+        </button>
+    </div>
+
+    <div class="card shadow">
+        <div class="card-header bg-primary text-white">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h5 class="mb-0">Danh sách thẻ</h5>
+                </div>
+                <div class="col-md-6">
+                    <partial name="~/Pages/Shared/_SearchBar.cshtml" model="@Model.Parameters.SearchTerm" />
+                </div>
+            </div>
+        </div>
+        <div class="card-body">
+            <partial name="Partials/_TagTable" model="@Model.Tags" />
+        </div>
+        <div class="card-footer d-flex justify-content-between align-items-center">
+            <div>Tổng số: <span class="fw-bold">@Model.Pagination.MetaData.TotalCount</span> thẻ</div>
+            <partial name="~/Pages/Shared/_Pagination.cshtml" model="@Model.Pagination" />
+        </div>
+    </div>
+</div>
+
+
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
